--- a/src/components/Meals/Meals.module.css
+++ b/src/components/Meals/Meals.module.css
@@ -1,5 +1,7 @@
 .items-list {
     animation: display 1s ease-out forwards;
+    overflow: hidden;
+  
     
 }
 
@@ -26,3 +28,4 @@
     }
     
 }
+
