--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -71,3 +71,13 @@
   border-color: #aa0b20;
   background-color: #ffeff1;
 }
+
+@media (max-width:480px) {
+  .control input {
+    width: 18rem;
+  }
+  .actions {
+    position: relative;
+    right: 1rem;
+  }
+}
