--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -24,20 +24,23 @@
 }
 .main-image img {
     width: 100%;
+    height: 70vh;
     min-height: 450px;
     object-fit: cover;
-
-
 
 
     
 }
 
-@media (min-width: 360px) {
+
+@media (max-width: 700px) {
     .header {
         display: flex;
         padding: 0 0.5rem;
         justify-content: space-between;
+    }
+    .headerName {
+        font-size: 1.5rem;
     }
     .main-image img {
         height: 22rem;
