--- a/src/components/Layout/HeaderButton.module.css
+++ b/src/components/Layout/HeaderButton.module.css
@@ -54,3 +54,28 @@
       transform: scale(1);
     }
   }
+
+@media (max-width: 360px) {
+  .button {
+    padding: 0.5rem 1.2rem;
+    font-size: 0.75rem;
+  }
+
+}
+
+@media (max-width: 700px) {
+  .button {
+    padding: 0.5rem 1.2rem;
+  }
+  .icon {
+    width: 1.1rem;
+    height: 1.1rem;
+  }
+  .badge {
+    padding: 0.2rem 0.7rem; ;
+
+  }
+ 
+}
+
+  
