--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -12,3 +12,9 @@
     opacity: 0.9;
     box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
   }
+
+  @media (max-width:576px) {
+    .summary {
+      font-size: 0.85rem;
+    }
+  }
