Fixing media queries

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -37,7 +37,10 @@
     float: right;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 576px) {
+  .cartItems {
+    font-size: 1rem;
+  }
   .cartItems,.total,.button-wrapper {
      font-size: 0.8rem;
   }
