--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -21,7 +21,12 @@
     animation: slide-down 300ms ease-out forwards;
   }
 
-    
+
+  @media (max-width: 460px) {
+    .modal {
+      zoom: 0.75;
+    }
+  }
   @media (min-width: 768px) {
     .modal {
       width: 40rem;
